Updated Bungeecord version